python/tests/gold/authenticationtest/snapshots/econf.json
{
    "static_resources": {
        "clusters": [
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_127_0_0_1_8877",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "127.0.0.1",
                                                "port_value": 8877,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_127_0_0_1_8877",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_authenticationtest_http",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "authenticationtest-http.default",
                                                "port_value": 80,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_authenticationtest_http",
                "type": "STRICT_DNS"
            },
            {
                "connect_timeout": "3.000s",
                "dns_lookup_family": "V4_ONLY",
                "lb_policy": "ROUND_ROBIN",
                "load_assignment": {
                    "cluster_name": "cluster_extauth_authenticationtest_ahttp_auth",
                    "endpoints": [
                        {
                            "lb_endpoints": [
                                {
                                    "endpoint": {
                                        "address": {
                                            "socket_address": {
                                                "address": "authenticationtest-ahttp-auth.default",
                                                "port_value": 80,
                                                "protocol": "TCP"
                                            }
                                        }
                                    }
                                }
                            ]
                        }
                    ]
                },
                "name": "cluster_extauth_authenticationtest_ahttp_auth",
                "type": "STRICT_DNS"
            }
        ],
        "listeners": [
            {
                "address": {
                    "socket_address": {
                        "address": "0.0.0.0",
                        "port_value": 8080,
                        "protocol": "TCP"
                    }
                },
                "filter_chains": [
                    {
                        "filters": [
                            {
                                "config": {
                                    "access_log": [
                                        {
                                            "config": {
                                                "format": "ACCESS [%START_TIME%] \"%REQ(:METHOD)% %REQ(X-ENVOY-ORIGINAL-PATH?:PATH)% %PROTOCOL%\" %RESPONSE_CODE% %RESPONSE_FLAGS% %BYTES_RECEIVED% %BYTES_SENT% %DURATION% %RESP(X-ENVOY-UPSTREAM-SERVICE-TIME)% \"%REQ(X-FORWARDED-FOR)%\" \"%REQ(USER-AGENT)%\" \"%REQ(X-REQUEST-ID)%\" \"%REQ(:AUTHORITY)%\" \"%UPSTREAM_HOST%\"\n",
                                                "path": "/dev/fd/1"
                                            },
                                            "name": "envoy.file_access_log"
                                        }
                                    ],
                                    "http_filters": [
                                        {
                                            "config": {
                                                "http_service": {
                                                    "authorization_request": {
                                                        "allowed_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "Authorization"
                                                                },
                                                                {
                                                                    "exact": "Cookie"
                                                                },
                                                                {
                                                                    "exact": "Forwarded"
                                                                },
                                                                {
                                                                    "exact": "From"
                                                                },
                                                                {
                                                                    "exact": "Host"
                                                                },
                                                                {
                                                                    "exact": "Proxy-Authenticate"
                                                                },
                                                                {
                                                                    "exact": "Proxy-Authorization"
                                                                },
                                                                {
                                                                    "exact": "Set-Cookie"
                                                                },
                                                                {
                                                                    "exact": "User-Agent"
                                                                },
                                                                {
                                                                    "exact": "WWW-Authenticate"
                                                                },
                                                                {
                                                                    "exact": "X-Forwarded-For"
                                                                },
                                                                {
                                                                    "exact": "X-Forwarded-Host"
                                                                },
                                                                {
                                                                    "exact": "X-Forwarded-Proto"
                                                                },
                                                                {
                                                                    "exact": "X-Gateway-Proto"
                                                                },
                                                                {
                                                                    "exact": "extauth"
                                                                },
                                                                {
                                                                    "exact": "requested-header"
                                                                },
                                                                {
                                                                    "exact": "requested-location"
                                                                },
                                                                {
                                                                    "exact": "requested-status"
                                                                },
                                                                {
                                                                    "exact": "x-b3-flags"
                                                                },
                                                                {
                                                                    "exact": "x-b3-parentspanid"
                                                                },
                                                                {
                                                                    "exact": "x-b3-sampled"
                                                                },
                                                                {
                                                                    "exact": "x-b3-spanid"
                                                                },
                                                                {
                                                                    "exact": "x-b3-traceid"
                                                                },
                                                                {
                                                                    "exact": "x-bar"
                                                                },
                                                                {
                                                                    "exact": "x-foo"
                                                                },
                                                                {
                                                                    "exact": "x-ot-span-context"
                                                                }
                                                            ]
                                                        }
                                                    },
                                                    "authorization_response": {
                                                        "allowed_client_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "authorization"
                                                                },
                                                                {
                                                                    "exact": "extauth"
                                                                },
                                                                {
                                                                    "exact": "location"
                                                                },
                                                                {
                                                                    "exact": "proxy-authenticate"
                                                                },
                                                                {
                                                                    "exact": "requested-header"
                                                                },
                                                                {
                                                                    "exact": "requested-location"
                                                                },
                                                                {
                                                                    "exact": "requested-status"
                                                                },
                                                                {
                                                                    "exact": "set-cookie"
                                                                },
                                                                {
                                                                    "exact": "www-authenticate"
                                                                },
                                                                {
                                                                    "exact": "x-bar"
                                                                },
                                                                {
                                                                    "exact": "x-foo"
                                                                }
                                                            ]
                                                        },
                                                        "allowed_upstream_headers": {
                                                            "patterns": [
                                                                {
                                                                    "exact": "authorization"
                                                                },
                                                                {
                                                                    "exact": "extauth"
                                                                },
                                                                {
                                                                    "exact": "location"
                                                                },
                                                                {
                                                                    "exact": "proxy-authenticate"
                                                                },
                                                                {
                                                                    "exact": "requested-header"
                                                                },
                                                                {
                                                                    "exact": "requested-location"
                                                                },
                                                                {
                                                                    "exact": "requested-status"
                                                                },
                                                                {
                                                                    "exact": "set-cookie"
                                                                },
                                                                {
                                                                    "exact": "www-authenticate"
                                                                },
                                                                {
                                                                    "exact": "x-bar"
                                                                },
                                                                {
                                                                    "exact": "x-foo"
                                                                }
                                                            ]
                                                        }
                                                    },
                                                    "path_prefix": "/extauth",
                                                    "server_uri": {
                                                        "cluster": "cluster_extauth_authenticationtest_ahttp_auth",
                                                        "timeout": "5.000s",
                                                        "uri": "http://extauth"
                                                    }
                                                }
                                            },
                                            "name": "envoy.ext_authz"
                                        },
                                        {
                                            "name": "envoy.cors"
                                        },
                                        {
                                            "name": "envoy.router"
                                        }
                                    ],
                                    "http_protocol_options": {
                                        "accept_http_10": false
                                    },
                                    "normalize_path": true,
                                    "route_config": {
                                        "virtual_hosts": [
                                            {
                                                "domains": [
                                                    "*"
                                                ],
                                                "name": "backend",
                                                "routes": [
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_ready",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "prefix_rewrite": "/ambassador/v0/check_ready",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/check_alive",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "prefix_rewrite": "/ambassador/v0/check_alive",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/ambassador/v0/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_127_0_0_1_8877"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_127_0_0_1_8877",
                                                            "prefix_rewrite": "/ambassador/v0/",
                                                            "priority": null,
                                                            "timeout": "10.000s"
                                                        }
                                                    },
                                                    {
                                                        "match": {
                                                            "case_sensitive": true,
                                                            "prefix": "/target/",
                                                            "runtime_fraction": {
                                                                "default_value": {
                                                                    "denominator": "HUNDRED",
                                                                    "numerator": 100
                                                                },
                                                                "runtime_key": "routing.traffic_shift.cluster_authenticationtest_http"
                                                            }
                                                        },
                                                        "route": {
                                                            "cluster": "cluster_authenticationtest_http",
                                                            "prefix_rewrite": "/",
                                                            "priority": null,
                                                            "timeout": "3.000s"
                                                        }
                                                    }
                                                ]
                                            }
                                        ]
                                    },
                                    "server_name": "envoy",
                                    "stat_prefix": "ingress_http",
                                    "use_remote_address": true,
                                    "xff_num_trusted_hops": 0
                                },
                                "name": "envoy.http_connection_manager"
                            }
                        ],
                        "use_proxy_proto": false
                    }
                ],
                "name": "ambassador-listener-8080"
            }
        ]
    }
}
